--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
       <!-- Featured (large) -->
       <div class="proj-card featured reveal">
-        <img src="images_dws/iit_roorkee.png" alt="IIT Roorkee">
+        <img src="images_dws/iit_roorkee2.png" alt="IIT Roorkee">
         <div class="proj-overlay">
           <span class="proj-tag">Institutional</span>
           <h3>IIT Roorkee Campus</h3>
