--- a/thank-you.html
+++ b/thank-you.html
@@ -24,6 +24,16 @@
       color: #0f766e;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WMPXXLEXDP">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WMPXXLEXDP');
+</script>
 </head>
 <body>
   <div class="box">
