--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
 
     <div class="about-intro-visual reveal reveal-delay-2">
       <div class="about-img-wrap">
-        <img src="images_dws/iitwork.jpg" alt="Deepansh Water Solution team at work">
+        <img src="images_dws/team.jpg" alt="Deepansh Water Solution team at work">
       </div>
       <div class="about-badge">
         <div class="about-badge-num">12+</div>
