--- a/projects.html
+++ b/projects.html
@@ -91,10 +91,22 @@
 
       <!-- IIT Roorkee -->
       <div class="project-card institutional reveal">
-        <div class="project-card-img">
-          <img src="images_dws/iit_roorkee.png" alt="IIT Roorkee">
-          <span class="project-type-badge">Institutional</span>
-        </div>
+        <div class="project-card-img slider">
+  <div class="slides">
+    <img src="images_dws/iit_roorkee.png" class="slide">
+    <img src="images_dws/iit_roorkee2.png" class="slide">
+    <img src="images_dws/iitwork.jpg" class="slide">
+  </div>
+
+  <button class="slider-btn prev">
+    <i class="fa-solid fa-chevron-left"></i>
+  </button>
+  <button class="slider-btn next">
+    <i class="fa-solid fa-chevron-right"></i>
+  </button>
+
+  <span class="project-type-badge">Institutional</span>
+</div>
         <div class="project-card-body">
           <h3>IIT Roorkee Campus</h3>
           <div class="project-facts">
@@ -105,28 +117,25 @@
         </div>
       </div>
 
-      <!-- Multi-Sport Complex -->
-      <div class="project-card sports reveal reveal-delay-1">
-        <div class="project-card-img">
-          <img src="images_dws/football.jpg" alt="Multi-Sport Complex">
-          <span class="project-type-badge">Sports Ground</span>
-        </div>
-        <div class="project-card-body">
-          <h3>Multi-Sport Complex</h3>
-          <div class="project-facts">
-            <span class="fact"><i class="fa-solid fa-location-dot"></i> Delhi</span>
-            <span class="fact"><i class="fa-solid fa-ruler-combined"></i> 8 acres</span>
-            <span class="fact"><i class="fa-solid fa-calendar"></i> 2023</span>
-          </div>
-        </div>
-      </div>
-
       <!-- Ved Van Park -->
       <div class="project-card commercial reveal reveal-delay-2">
-        <div class="project-card-img">
-          <img src="images_dws/vedvan.jpg" alt="Ved Van Park">
-          <span class="project-type-badge">Commercial</span>
-        </div>
+        <div class="project-card-img slider">
+  <div class="slides">
+    <img src="images_dws/vedvan2.png" class="slide">
+    <img src="images_dws/vedvan.jpg" class="slide">
+    
+    <img src="images_dws/vedvan3.webp" class="slide">
+  </div>
+
+  <button class="slider-btn prev">
+    <i class="fa-solid fa-chevron-left"></i>
+  </button>
+  <button class="slider-btn next">
+    <i class="fa-solid fa-chevron-right"></i>
+  </button>
+
+  <span class="project-type-badge">Commercial</span>
+</div>
         <div class="project-card-body">
           <h3>Ved Van Park, Noida</h3>
           <div class="project-facts">
@@ -139,10 +148,19 @@
 
       <!-- Conscient Hines Elevate -->
       <div class="project-card commercial reveal">
-        <div class="project-card-img">
-          <img src="images_dws/tata2.JPG" alt="Conscient Hines Elevate">
-          <span class="project-type-badge">Commercial</span>
-        </div>
+        <div class="project-card-img slider">
+  <div class="slides">
+    <img src="images_dws/elevate2.png" class="slide">
+    <img src="images_dws/tata2.JPG" class="slide">
+    
+    <img src="images_dws/elevate3.jpg" class="slide">
+  </div>
+
+  <button class="slider-btn prev"><i class="fa-solid fa-chevron-left"></i></button>
+  <button class="slider-btn next"><i class="fa-solid fa-chevron-right"></i></button>
+
+  <span class="project-type-badge">Commercial</span>
+</div>
         <div class="project-card-body">
           <h3>Conscient Hines Elevate</h3>
           <div class="project-facts">
@@ -155,10 +173,22 @@
 
       <!-- IIT Jodhpur -->
       <div class="project-card institutional reveal reveal-delay-1">
-        <div class="project-card-img">
-          <img src="images_dws/iitjodhpur.jpg" alt="IIT Jodhpur">
-          <span class="project-type-badge">Institutional</span>
-        </div>
+        <div class="project-card-img slider">
+  <div class="slides">
+    <img src="images_dws/iitjodhpur3.jpg" class="slide">
+    <img src="images_dws/iitjodhpur.jpg" class="slide">
+    <img src="images_dws/iitjodhpur2.webp" class="slide">
+  </div>
+
+  <button class="slider-btn prev">
+    <i class="fa-solid fa-chevron-left"></i>
+  </button>
+  <button class="slider-btn next">
+    <i class="fa-solid fa-chevron-right"></i>
+  </button>
+
+  <span class="project-type-badge">Institutional</span>
+</div>
         <div class="project-card-body">
           <h3>IIT Jodhpur Campus</h3>
           <div class="project-facts">
@@ -171,10 +201,21 @@
 
       <!-- Solar Cleaning -->
       <div class="project-card smart reveal reveal-delay-2">
-        <div class="project-card-img">
-          <img src="images_dws/solar.jpg" alt="Solar Cleaning System">
-          <span class="project-type-badge">Smart Systems</span>
-        </div>
+        <div class="project-card-img slider">
+  <div class="slides">
+    <img src="images_dws/solar.jpg" class="slide">
+    <img src="images_dws/solar2.jpg" class="slide">
+  </div>
+
+  <button class="slider-btn prev">
+    <i class="fa-solid fa-chevron-left"></i>
+  </button>
+  <button class="slider-btn next">
+    <i class="fa-solid fa-chevron-right"></i>
+  </button>
+
+  <span class="project-type-badge">Commercial</span>
+</div>
         <div class="project-card-body">
           <h3>Solar Panel Cleaning System</h3>
           <div class="project-facts">
@@ -186,16 +227,78 @@
 
       <!-- American Express -->
       <div class="project-card commercial reveal">
-        <div class="project-card-img">
-          <img src="images_dws/Amex.jpg" alt="American Express">
-          <span class="project-type-badge">Commercial — AMC</span>
-        </div>
+       <div class="project-card-img slider">
+  <div class="slides">
+    <img src="images_dws/amex2.png" class="slide">
+    <img src="images_dws/Amex.jpg" class="slide">
+  </div>
+
+  <button class="slider-btn prev">
+    <i class="fa-solid fa-chevron-left"></i>
+  </button>
+  <button class="slider-btn next">
+    <i class="fa-solid fa-chevron-right"></i>
+  </button>
+
+  <span class="project-type-badge">Commercial</span>
+</div>
         <div class="project-card-body">
           <h3>American Express Campus</h3>
           <div class="project-facts">
             <span class="fact"><i class="fa-solid fa-location-dot"></i> Sector 43, Gurugram</span>
             <span class="fact"><i class="fa-solid fa-ruler-combined"></i> 100 acres</span>
             <span class="fact"><i class="fa-solid fa-calendar"></i> 2025</span>
+          </div>
+        </div>
+      </div>
+ <!-- IIT Jodhpur -->
+      <div class="project-card institutional reveal reveal-delay-1">
+        <div class="project-card-img slider">
+  <div class="slides">
+    <img src="images_dws/shantikunj2.avif" class="slide">
+    <img src="images_dws/shantikunj.webp" class="slide">
+    <img src="images_dws/shantikunj1.webp" class="slide">
+  </div>
+
+  <button class="slider-btn prev">
+    <i class="fa-solid fa-chevron-left"></i>
+  </button>
+  <button class="slider-btn next">
+    <i class="fa-solid fa-chevron-right"></i>
+  </button>
+
+  <span class="project-type-badge">Institutional</span>
+</div>
+        <div class="project-card-body">
+          <h3>Dev Sanskriti Vishwavidyalaya</h3>
+          <div class="project-facts">
+            <span class="fact"><i class="fa-solid fa-location-dot"></i> Shantikunj, Haridwar</span>
+            <span class="fact"><i class="fa-solid fa-ruler-combined"></i> 100 acres</span>
+            <span class="fact"><i class="fa-solid fa-calendar"></i> 2022</span>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Multi-Sport Complex -->
+      <div class="project-card sports reveal reveal-delay-1">
+        <div class="project-card-img video-card">
+  <video class="project-video" preload="metadata">
+    <source src="images_dws/sparshglobal.mp4" type="video/mp4">
+  </video>
+
+  <div class="play-btn">
+    <i class="fa-solid fa-play"></i>
+  </div>
+
+  <span class="project-type-badge">Institutional</span>
+</div>
+        <div class="project-card-body">
+          <h3>Sparsh Global School</h3>
+          <div class="project-facts">
+            <span class="fact"><i class="fa-solid fa-location-dot"></i> Sector 20, Greater Noida</span>
+            <span class="fact"><i class="fa-solid fa-ruler-combined"></i> 8 acres</span>
+            <span class="fact"><i class="fa-solid fa-calendar"></i> Jun,2023</span>
           </div>
         </div>
       </div>
