--- a/services.html
+++ b/services.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="svc-image">
-        <img src="images_dws/iit_roorkee.png" alt="Institutional irrigation — IIT Roorkee">
+        <img src="images_dws/iit_roorkee2.png" alt="Institutional irrigation — IIT Roorkee">
         <span class="svc-image-badge">IIT Roorkee, 80 Acres</span>
       </div>
     </div>
@@ -127,7 +127,7 @@
         </div>
       </div>
       <div class="svc-image">
-        <img src="images_dws/vedvan.jpg" alt="Commercial landscape irrigation">
+        <img src="images_dws/Commercial.png" alt="Commercial landscape irrigation">
         <span class="svc-image-badge">Ved Van Park, 100 Acres</span>
       </div>
     </div>
