--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Deepansh Water Solution — Professional irrigation and water management solutions for institutions, sports complexes, and commercial landscapes.">
   <title>Deepansh Water Solution | Professional Irrigation Systems</title>
-
+<meta name="description" content="Deepansh Water Solution provides advanced irrigation systems, solar module arrays and smart water management solutions in India.">
+<meta name="keywords" content="irrigation system, solar water pump, water management India, smart irrigation, DWS">
+<meta name="author" content="Deepansh Water Solution">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
