--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="48x48" href="favico.png">
+<link rel="shortcut icon" href="favico.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Deepansh Water Solution — Professional irrigation and water management solutions for institutions, sports complexes, and commercial landscapes.">
